# neo4j_ontology_loader

./: .gitignore  README.md  pyproject.toml
data/szkb/: bonds.csv  cross_rates.csv  equities.csv  instrument_types.csv  listings.csv  quotes.csv  trading_venues.csv
src/neo4j_ontology_loader/: cli.py  config.py
src/neo4j_ontology_loader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/neo4j_ontology_loader/ingest/: cypher_templates.py  relationship.py
src/neo4j_ontology_loader/models/: bond.py  instrument_type.py  issuer.py  listing.py  quotes.py  relationships.py  types.py
src/neo4j_ontology_loader/neo4j/: session.py
src/neo4j_ontology_loader/schema/: __init__.py  ddl_maintenance.py  ddl_schema.py  ddl_szkb.py  extract.py  persist.py  szkb_specs.py  types.py
tests/: conftest.py  test_schema_extraction.py
