[project]
name = "neo4j-ontology-loader"
version = "0.1.0"
description = "Ontology-driven Neo4j loader using Pydantic models + template-driven ingestion"
requires-python = ">=3.11"
dependencies = [
  "neo4j>=5.20.0",
  "pydantic>=2.7.0",
  "pandas>=2.2.0",
  "typer>=0.12.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
neo4j-ontology-loader = "neo4j_ontology_loader.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
